syntax="proto3";

package interface_adapters;

service HelloService{
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}